temp fix for null pointer exception